--- a/src/main/resources/gui/fxml/Main.fxml
+++ b/src/main/resources/gui/fxml/Main.fxml
@@ -12,12 +12,22 @@
    <top>
       <HBox fx:id="topBox" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" text="Back">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
             <Button fx:id="homeButton" mnemonicParsing="false" onAction="#openHome" text="Home">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region HBox.hgrow="ALWAYS" />
+            <Button fx:id="compareButton" layoutX="838.0" layoutY="30.0" mnemonicParsing="false" onAction="#openCompare" text="Compare">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
             <Button fx:id="cartButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#openCart" text="Cart">
                <font>
                   <Font size="14.0" />
