--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -14,13 +14,13 @@
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.PersonalInfoController">
     <children>
-        <HBox prefHeight="720.0" prefWidth="781.0">
+        <HBox prefHeight="720.0" prefWidth="950.0">
             <children>
-                <VBox prefHeight="720.0" prefWidth="455.0">
+                <VBox prefHeight="720.0" prefWidth="535.0">
                     <children>
-                        <HBox prefHeight="387.0" prefWidth="407.0">
+                        <HBox prefHeight="387.0" prefWidth="492.0">
                             <children>
-                                <VBox prefHeight="387.0" prefWidth="330.0">
+                                <VBox prefHeight="387.0" prefWidth="319.0">
                                     <children>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
@@ -144,7 +144,10 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                         </HBox>
-                  <ScrollPane fx:id="tableScrollPane" prefWidth="580.0" />
+                  <ScrollPane prefWidth="950.0">
+                     <content>
+                        <VBox fx:id="tableScrollPane" alignment="TOP_CENTER" prefHeight="324.0" prefWidth="519.0" />
+                     </content></ScrollPane>
                     </children>
                 </VBox>
             </children>
