--- a/src/main/resources/gui/fxml/TableOfOrders.fxml
+++ b/src/main/resources/gui/fxml/TableOfOrders.fxml
@@ -5,9 +5,9 @@
 
 <TableView fx:id="tableView" prefHeight="333.0" prefWidth="568.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.customer.OrderTableController">
     <columns>
-        <TableColumn fx:id="dateColumn" prefWidth="134.66664123535156" text="Date" />
-        <TableColumn fx:id="priceColumn" minWidth="6.0" prefWidth="102.0" text="Total price" />
-        <TableColumn fx:id="paidAmount" prefWidth="119.33332824707031" text="Paid amount" />
-        <TableColumn fx:id="addressColumn" prefWidth="210.66665649414062" text="Address" />
+        <TableColumn prefWidth="134.66664123535156" text="Date" />
+        <TableColumn minWidth="6.0" prefWidth="102.0" text="Total price" />
+        <TableColumn prefWidth="119.33332824707031" text="Paid amount" />
+        <TableColumn prefWidth="210.66665649414062" text="Address" />
     </columns>
 </TableView>
