--- a/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
+++ b/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
@@ -191,14 +191,14 @@
          <children>
             <TableView fx:id="buyersTableView" prefHeight="188.0" prefWidth="129.0">
               <columns>
-                <TableColumn fx:id="buyersTableViewColumns" prefWidth="127.99997198581696" text="Buyer" />
+                <TableColumn prefWidth="127.99997198581696" text="Buyer" />
               </columns>
             </TableView>
             <TableView fx:id="categoryFeatures" prefHeight="188.0" prefWidth="473.0">
               <columns>
-                <TableColumn fx:id="featureName" prefWidth="97.33331298828125" text="Name" />
-                <TableColumn fx:id="featureType" prefWidth="92.00001525878906" text="Type" />
-                  <TableColumn fx:id="featureDescription" prefWidth="281.3333231608073" text="Description" />
+                <TableColumn prefWidth="97.33331298828125" text="Name" />
+                <TableColumn prefWidth="92.00001525878906" text="Type" />
+                  <TableColumn prefWidth="281.3333231608073" text="Description" />
               </columns>
             </TableView>
          </children>
