--- a/src/main/resources/gui/fxml/SuccessPage.fxml
+++ b/src/main/resources/gui/fxml/SuccessPage.fxml
@@ -9,10 +9,10 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="630.0" stylesheets="@../styleSheet/SuccessPage.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.SuccessPageController">
    <bottom>
-      <AnchorPane fx:id="message" prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" stylesheets="@../../../../../../../Desktop/css/src/sample/ErrorPage.css" text="OK" />
-            <TextField alignment="CENTER" layoutX="184.0" layoutY="25.0" prefHeight="94.0" prefWidth="259.0">
+            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" text="OK" />
+            <TextField fx:id="message" alignment="CENTER" layoutX="184.0" layoutY="25.0" prefHeight="94.0" prefWidth="259.0">
                <font>
                   <Font size="18.0" />
                </font>
@@ -21,6 +21,9 @@
       </AnchorPane>
    </bottom>
    <center>
-      <Label stylesheets="@../../../../../../../Desktop/css/src/sample/ErrorPage.css" text="Success" BorderPane.alignment="CENTER" />
+      <Label stylesheets="@../../../../../../../Desktop/css/src/sample/ErrorPage.css" text="Success" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
    </center>
 </BorderPane>
