--- a/src/main/resources/gui/fxml/CustomersButton.fxml
+++ b/src/main/resources/gui/fxml/CustomersButton.fxml
@@ -10,7 +10,7 @@
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="720.0" prefWidth="100.0" spacing="100.0">
           <children>
-              <ImageView fitHeight="125.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
+              <ImageView fx:id="profileImageView" fitHeight="125.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
                   <image>
                       <Image url="@../pic/AdminProfilePicture.png" />
                   </image>
