--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -104,9 +104,14 @@
                                                 <Insets top="50.0" />
                                             </VBox.margin>
                                         </Button>
+                              <Button mnemonicParsing="false" onAction="#changePhoto" text="upload Photo">
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                              </Button>
                               <Button fx:id="cancelButton" mnemonicParsing="false" text="cancle">
                                  <VBox.margin>
-                                    <Insets top="40.0" />
+                                    <Insets top="30.0" />
                                  </VBox.margin>
                               </Button>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
