--- a/src/main/resources/gui/fxml/ComparePane.fxml
+++ b/src/main/resources/gui/fxml/ComparePane.fxml
@@ -8,15 +8,16 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
     <children>
         <VBox alignment="TOP_CENTER" prefHeight="450.0" prefWidth="100.0" spacing="10.0">
             <children>
             <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT" />
-                <Region prefHeight="240.0" prefWidth="200.0" />
+                <Region prefHeight="240.0" prefWidth="100.0" />
                 <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
                 <TextField text="Brand" />
                 <TextField text="Description" />
+            <Region prefHeight="53.0" prefWidth="100.0" />
                 <TextField text="Price" />
                 <TextField text="Rate" />
                 <TextField text="Features" />
@@ -25,7 +26,7 @@
                 <Insets bottom="3.0" />
             </HBox.margin>
         </VBox>
-        <ScrollPane fx:id="scrollPaneForCompare" prefHeight="453.0" prefWidth="503.0">
+        <ScrollPane fx:id="scrollPaneForCompare" maxWidth="1000.0" prefHeight="600.0" prefWidth="1000.0">
             <content>
                 <HBox fx:id="box" alignment="CENTER_LEFT" />
             </content>
