--- a/src/main/resources/gui/fxml/ComparePane.fxml
+++ b/src/main/resources/gui/fxml/ComparePane.fxml
@@ -8,27 +8,29 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
+<HBox maxHeight="600.0" maxWidth="1000.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
     <children>
-        <VBox alignment="TOP_CENTER" prefHeight="450.0" prefWidth="100.0" spacing="10.0">
-            <children>
-            <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT" />
-                <Region prefHeight="240.0" prefWidth="100.0" />
-                <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
-                <TextField text="Brand" />
-                <TextField text="Description" />
-            <Region prefHeight="53.0" prefWidth="100.0" />
-                <TextField text="Price" />
-                <TextField text="Rate" />
-                <TextField text="Features" />
-            </children>
-            <HBox.margin>
-                <Insets bottom="3.0" />
-            </HBox.margin>
-        </VBox>
-        <ScrollPane fx:id="scrollPaneForCompare" maxWidth="1000.0" prefHeight="600.0" prefWidth="1000.0">
+        <ScrollPane fx:id="scrollPaneForCompare" prefHeight="600.0">
             <content>
-                <HBox fx:id="box" alignment="CENTER_LEFT" />
+                <HBox fx:id="box" alignment="CENTER_LEFT" minHeight="600.0" minWidth="100.0">
+               <children>
+                    <VBox alignment="TOP_CENTER" minWidth="100.0" prefHeight="450.0" prefWidth="100.0" spacing="10.0">
+                        <children>
+                        <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT" />
+                            <Region prefHeight="272.0" prefWidth="100.0" />
+                            <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
+                            <TextField text="Brand" />
+                            <TextField text="Description" />
+                        <Region maxWidth="100.0" minWidth="100.0" prefHeight="50.0" prefWidth="100.0" />
+                            <TextField text="Price" />
+                            <TextField text="Rate" />
+                            <TextField text="Features" />
+                        </children>
+                        <HBox.margin>
+                            <Insets bottom="3.0" />
+                        </HBox.margin>
+                    </VBox>
+               </children></HBox>
             </content>
         </ScrollPane>
     </children>
