--- a/src/main/resources/gui/fxml/AdminMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminMenu.fxml
@@ -17,7 +17,7 @@
    <children>
       <HBox prefHeight="720.0" prefWidth="1021.0">
          <children>
-            <ImageView fitHeight="188.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="profileImage" fitHeight="188.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../pic/AdminProfilePicture.png" />
                </image>
@@ -106,6 +106,11 @@
                               <Button fx:id="editInfoButton" mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-blck; : FFFF;" text="Edit Info">
                                  <VBox.margin>
                                     <Insets top="50.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" onAction="#uploadPhoto" prefHeight="44.0" prefWidth="101.0" text="Upload Photo">
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
                                  </VBox.margin>
                               </Button>
                            </children>
