--- a/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -54,6 +54,7 @@
                <VBox.margin>
                   <Insets bottom="50.0" />
                </VBox.margin></Button>
+            <Button fx:id="commentButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Comments" />
          </children>
       </VBox>
       <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
