--- a/src/main/resources/gui/fxml/AllProducts.fxml
+++ b/src/main/resources/gui/fxml/AllProducts.fxml
@@ -12,7 +12,7 @@
 
 <HBox prefWidth="1500.0" spacing="15.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.AllProductsController">
    <children>
-      <VBox minWidth="170.0" prefHeight="586.0" prefWidth="170.0" spacing="15.0">
+      <VBox minWidth="170.0" prefHeight="952.0" prefWidth="170.0" spacing="15.0" styleClass="yellow" stylesheets="@../styleSheet/Buttons.css">
          <children>
             <TextField fx:id="nameField" onAction="#reload" prefHeight="37.0" prefWidth="149.0" promptText="Name">
                <padding>
@@ -35,7 +35,7 @@
             <CheckBox fx:id="offCheckBox" mnemonicParsing="false" onAction="#reload" text="Show Offs" />
             <Label text="price" />
             <Slider fx:id="minPrice" blockIncrement="5.0" max="1000" prefHeight="25.0" prefWidth="170.0" showTickLabels="true" showTickMarks="true" />
-            <Slider fx:id="maxPrice" max="100" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" value="1000.0" />
+            <Slider fx:id="maxPrice" max="1000" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" value="1000.0" />
             <VBox fx:id="price" prefHeight="200.0" prefWidth="170.0" />
             <Label layoutX="10.0" layoutY="241.0" prefHeight="17.0" prefWidth="35.0" text="rate" />
             <Slider fx:id="minRate" max="5.0" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" />
@@ -45,7 +45,7 @@
             <fx:include fx:id="categoryList" source="CategoryList.fxml" />
          </children>
       </VBox>
-      <ScrollPane fx:id="mainScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="1500.0" />
+      <ScrollPane fx:id="mainScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="1500.0" styleClass="mainPane" stylesheets="@../styleSheet/main.css" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
