--- a/src/main/resources/gui/fxml/AllProducts.fxml
+++ b/src/main/resources/gui/fxml/AllProducts.fxml
@@ -12,7 +12,7 @@
 
 <HBox prefWidth="1500.0" spacing="15.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.AllProductsController">
    <children>
-      <VBox minWidth="170.0" prefHeight="952.0" prefWidth="170.0" spacing="15.0" styleClass="yellow" stylesheets="@../styleSheet/Buttons.css">
+      <VBox minWidth="170.0" prefHeight="952.0" prefWidth="170.0" spacing="15.0">
          <children>
             <TextField fx:id="nameField" onAction="#reload" prefHeight="37.0" prefWidth="149.0" promptText="Name">
                <padding>
@@ -33,12 +33,13 @@
                </padding>
             </TextField>
             <CheckBox fx:id="offCheckBox" mnemonicParsing="false" onAction="#reload" text="Show Offs" />
-            <Label text="Price" />
-            <Slider fx:id="minPrice" blockIncrement="5.0" max="1800" prefHeight="25.0" prefWidth="170.0" showTickLabels="true" showTickMarks="true" />
-            <Slider fx:id="maxPrice" max="1800" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" value="1000.0" />
+            <Label text="price" />
+            <Slider fx:id="minPrice" blockIncrement="5.0" max="1000" prefHeight="25.0" prefWidth="170.0" showTickLabels="true" showTickMarks="true" />
+            <Slider fx:id="maxPrice" max="1000" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" value="1000.0" />
             <VBox fx:id="price" prefHeight="200.0" prefWidth="170.0" />
-            <Label layoutX="10.0" layoutY="241.0" prefHeight="17.0" prefWidth="35.0" text="Rate" />
-            <Slider fx:id="rateSlider" max="5.0" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" />
+            <Label layoutX="10.0" layoutY="241.0" prefHeight="17.0" prefWidth="35.0" text="rate" />
+            <Slider fx:id="minRate" max="5.0" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" />
+            <Slider fx:id="maxRate" max="5.0" prefHeight="14.0" prefWidth="137.0" showTickLabels="true" showTickMarks="true" />
             <ComboBox fx:id="sortDirectionComboBox" onAction="#reload" prefHeight="39.0" prefWidth="241.0" />
             <ComboBox fx:id="sortFieldComboBox" onAction="#reload" prefHeight="39.0" prefWidth="243.0" />
             <fx:include fx:id="categoryList" source="CategoryList.fxml" />
