--- a/src/main/resources/gui/fxml/Main.fxml
+++ b/src/main/resources/gui/fxml/Main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -22,6 +23,7 @@
                   <Font name="Californian FB Italic" size="14.0" />
                </font>
             </Button>
+            <ColorPicker fx:id="colorPicker" onAction="#changeColor" />
             <Region HBox.hgrow="ALWAYS" />
             <Button fx:id="compareButton" layoutX="838.0" layoutY="30.0" mnemonicParsing="false" onAction="#openCompare" text="Compare">
                <font>
