--- a/src/main/resources/gui/styleSheet/Buttons.css
+++ b/src/main/resources/gui/styleSheet/Buttons.css
@@ -12,39 +12,38 @@
     -fx-padding: 10 20 10 20;
 
 }
-.button1{
-     display:inline-block;
-     padding:0.35em 1.2em;
-     border:0.1em solid #FFFFFF;
-     margin:0 0.3em 0.3em 0;
-     border-radius:0.12em;
-     box-sizing: border-box;
-     text-decoration:none;
-     font-family:'Roboto',sans-serif;
-     font-weight:300;
-     color:#FFFFFF;
-     text-align:center;
-     transition: all 0.2s;
+
+.button1 {
+     -fx-padding: 0.35em 1.2em;
+     -fx-border: 0.1em solid #FFFFFF;
+     -fx-border-radius: 0.12em;
+     -fx-box-sizing: border-box;
+     -fx-text-decoration: none;
+     -fx-font-family: 'Roboto', sans-serif;
+     -fx-color: #FFFFFF;
 }
-a.button1:hover{
-     color:#000000;
-     background-color:#FFFFFF;
+
+a.button1:hover {
+     color: #000000;
+     background-color: #FFFFFF;
 }
-a.button2{
-     display:inline-block;
-     padding:0.5em 3em;
-     border:0.16em solid #FFFFFF;
-     margin:0 0.3em 0.3em 0;
+
+a.button2 {
+     display: inline-block;
+     padding: 0.5em 3em;
+     border: 0.16em solid #FFFFFF;
+     margin: 0 0.3em 0.3em 0;
      box-sizing: border-box;
-     text-decoration:none;
-     text-transform:uppercase;
-     font-family:'Roboto',sans-serif;
-     font-weight:400;
-     color:#FFFFFF;
-     text-align:center;
+     text-decoration: none;
+     text-transform: uppercase;
+     font-family: 'Roboto', sans-serif;
+     font-weight: 400;
+     color: #FFFFFF;
+     text-align: center;
      transition: all 0.15s;
 }
-.button2:hover{
-     color:#DDDDDD;
-     border-color:#DDDDDD;
+
+.button2:hover {
+     color: #DDDDDD;
+     border-color: #DDDDDD;
 }
