--- a/src/main/resources/gui/fxml/SuccessPage.fxml
+++ b/src/main/resources/gui/fxml/SuccessPage.fxml
@@ -12,7 +12,7 @@
       <AnchorPane prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" text="OK" />
-            <TextField fx:id="message" alignment="CENTER" layoutX="184.0" layoutY="25.0" prefHeight="94.0" prefWidth="259.0">
+            <TextField fx:id="message" alignment="CENTER" editable="false" layoutX="42.0" layoutY="24.0" prefHeight="117.0" prefWidth="546.0">
                <font>
                   <Font size="18.0" />
                </font>
