--- a/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -12,7 +12,7 @@
          <children>
             <Button fx:id="promoButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Promos">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Britannic Bold" size="18.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="50.0" />
@@ -20,7 +20,7 @@
             </Button>
             <Button fx:id="categoryButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Categories">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Britannic Bold" size="18.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="50.0" />
@@ -28,7 +28,7 @@
             </Button>
             <Button fx:id="usersButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Users">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Britannic Bold" size="18.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="50.0" />
@@ -36,7 +36,7 @@
             </Button>
             <Button fx:id="requestsButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Requests">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Britannic Bold" size="18.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="50.0" />
@@ -47,14 +47,20 @@
                   <Insets bottom="50.0" />
                </VBox.margin>
                <font>
-                  <Font size="18.0" />
+                  <Font name="Britannic Bold" size="18.0" />
                </font>
             </Button>
             <Button fx:id="newManagerButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Add a New Manager" wrapText="true">
                <VBox.margin>
                   <Insets bottom="50.0" />
-               </VBox.margin></Button>
-            <Button fx:id="commentButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Comments" />
+               </VBox.margin>
+               <font>
+                  <Font name="Britannic Bold" size="12.0" />
+               </font></Button>
+            <Button fx:id="commentButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Comments">
+               <font>
+                  <Font name="Britannic Bold" size="18.0" />
+               </font></Button>
          </children>
       </VBox>
       <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
