--- a/src/main/resources/gui/fxml/ComparePane.fxml
+++ b/src/main/resources/gui/fxml/ComparePane.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox maxHeight="600.0" maxWidth="1000.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
     <children>
@@ -16,15 +17,36 @@
                <children>
                     <VBox alignment="TOP_CENTER" minWidth="100.0" prefHeight="450.0" prefWidth="100.0" spacing="10.0">
                         <children>
-                        <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT" />
+                        <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></Button>
                             <Region prefHeight="272.0" prefWidth="100.0" />
-                            <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
-                            <TextField text="Brand" />
-                            <TextField text="Description" />
+                            <TextField prefHeight="25.0" prefWidth="84.0" text="Name">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
+                            <TextField text="Brand">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
+                            <TextField text="Description">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
                         <Region maxWidth="100.0" minWidth="100.0" prefHeight="50.0" prefWidth="100.0" />
-                            <TextField text="Price" />
-                            <TextField text="Rate" />
-                            <TextField text="Features" />
+                            <TextField text="Price">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
+                            <TextField text="Rate">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
+                            <TextField text="Features">
+                           <font>
+                              <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+                           </font></TextField>
                         </children>
                         <HBox.margin>
                             <Insets bottom="3.0" />
