--- a/src/main/resources/gui/fxml/ErrorPage.fxml
+++ b/src/main/resources/gui/fxml/ErrorPage.fxml
@@ -11,10 +11,13 @@
    <bottom>
       <AnchorPane prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" style="-fx-border-radius: 2000;" text="Ok" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="154.0" AnchorPane.rightAnchor="154.0" AnchorPane.topAnchor="168.0" />
+            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" style="-fx-border-radius: 2000;" text="Ok" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="154.0" AnchorPane.rightAnchor="154.0" AnchorPane.topAnchor="168.0">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font></Button>
             <TextField fx:id="errorMessage" alignment="CENTER" layoutX="58.0" prefHeight="123.0" prefWidth="514.0" text="">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Berlin Sans FB" size="18.0" />
                </font>
             </TextField>
          </children>
