--- a/src/main/resources/gui/fxml/ManagerComment.fxml
+++ b/src/main/resources/gui/fxml/ManagerComment.fxml
@@ -24,15 +24,21 @@
       </HBox>
       <HBox prefHeight="83.0" prefWidth="1021.0">
          <children>
-            <Button fx:id="confirmButton" mnemonicParsing="false" text="Confrim">
+            <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm">
                <HBox.margin>
                   <Insets left="300.0" top="30.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
             </Button>
             <Button fx:id="rejectButton" mnemonicParsing="false" text="Reject">
                <HBox.margin>
                   <Insets left="300.0" top="30.0" />
                </HBox.margin>
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
             </Button>
          </children>
       </HBox>
