--- a/src/main/resources/gui/fxml/ProductSeller.fxml
+++ b/src/main/resources/gui/fxml/ProductSeller.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.ProductSellerController">
    <children>
@@ -13,13 +14,16 @@
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="110.0" prefWidth="205.0">
                <children>
-                  <Label fx:id="sellerName" prefHeight="52.0" prefWidth="137.0" text="SellerNAme oR Usernaem">
+                  <Label fx:id="sellerName" prefHeight="52.0" prefWidth="162.0" text="SellerNAme oR Usernaeme">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <font>
+                        <Font name="Calisto MT" size="12.0" />
+                     </font>
                   </Label>
                   <Label fx:id="brand" layoutX="41.0" layoutY="10.0" prefHeight="52.0" prefWidth="137.0" text="ShopNAme">
                      <opaqueInsets>
@@ -28,6 +32,9 @@
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <font>
+                        <Font name="Calisto MT" size="12.0" />
+                     </font>
                   </Label>
                </children>
             </VBox>
@@ -44,14 +51,20 @@
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <font>
+                        <Font name="Calisto MT" size="12.0" />
+                     </font>
                   </Label>
-                  <Label fx:id="priceInOff" prefHeight="52.0" prefWidth="137.0" text="off if exist if not nothing">
+                  <Label fx:id="priceInOff" prefHeight="52.0" prefWidth="150.0" text="off if exist if not nothing">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <font>
+                        <Font name="Calisto MT" size="12.0" />
+                     </font>
                   </Label>
                </children>
             </VBox>
@@ -70,6 +83,9 @@
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
+                     <font>
+                        <Font name="Calisto MT" size="12.0" />
+                     </font>
                   </Button>
                </children>
             </VBox>
