--- a/src/main/resources/gui/fxml/SuccessPage.fxml
+++ b/src/main/resources/gui/fxml/SuccessPage.fxml
@@ -11,10 +11,13 @@
    <bottom>
       <AnchorPane prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" text="OK" />
+            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" text="OK">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font></Button>
             <TextField fx:id="message" alignment="CENTER" editable="false" layoutX="42.0" layoutY="24.0" prefHeight="117.0" prefWidth="546.0">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Berlin Sans FB" size="18.0" />
                </font>
             </TextField>
          </children>
@@ -23,7 +26,7 @@
    <center>
       <Label text="Success" BorderPane.alignment="CENTER">
          <font>
-            <Font size="18.0" />
+            <Font name="Bodoni MT Black" size="18.0" />
          </font></Label>
    </center>
 </BorderPane>
