--- a/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
+++ b/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -34,10 +35,11 @@
             </VBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="600.0" spacing="20.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="108.0" prefWidth="600.0" spacing="20.0">
          <children>
             <VBox alignment="CENTER_LEFT" prefHeight="77.0" prefWidth="194.0">
                <children>
+                  <Label fx:id="errorLabel" prefHeight="33.0" prefWidth="172.0" textFill="RED" />
                   <TextField fx:id="priceTextField" promptText="Price" />
                   <TextField fx:id="amountTextField" promptText="amount">
                      <VBox.margin>
@@ -63,7 +65,7 @@
             <Insets left="10.0" />
          </padding>
       </HBox>
-      <ScrollPane fx:id="categoryScrollPane" prefHeight="251.0" prefWidth="600.0">
+      <ScrollPane fx:id="categoryScrollPane" prefHeight="203.0" prefWidth="600.0">
          <content>
             <HBox prefWidth="594.0">
                <children>
