--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -161,7 +161,7 @@
             <children>
                 <ImageView fitHeight="30.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../pic/Main Menu.png" />
+                        <Image url="@../pic/ohno.Main Menu.png" />
                     </image>
                 </ImageView>
             <ScrollPane fx:id="detailScrollPane" prefHeight="693.0" prefWidth="694.0">
